--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.10",
+    "@types/p5": "^1.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "p5": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-p5": "^1.3.33",
+    "react-router": "^6.5.0",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +43,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4"
   }
 }
