--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.4.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +14,7 @@
     "@types/p5": "^1.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "framer-motion": "^7.10.3",
     "p5": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
