--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +15,8 @@
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "framer-motion": "^9.0.1",
+    "p5": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -45,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/p5": "^1.5.0",
     "react-router-dom": "^6.5.0"
   }
 }
